--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Hello World!</h1>
         <h1>Elemento agregado por gastelo</h1>
+        <h1>Element nuevo agrgado por gastelo</h1>
+        
     </body>
 </html>
